chore: add car controller, model. view and profiles
