# swagger/swagger.yml
@@ -12,105 +12,133 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /object/:
+  /car/:
     get:
       tags:
-      - object
+      - car
       description: |-
-        get all objects
+        get Car
         <br>
-      operationId: ObjectController.GetAll
+      operationId: CarController.GetAll
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Object'
+            $ref: '#/definitions/models.Car'
         "403":
-          description: :objectId is empty
+          description: ""
     post:
       tags:
-      - object
+      - car
       description: |-
-        create object
+        create Car
         <br>
-      operationId: ObjectController.Create
+      operationId: CarController.Create
       parameters:
       - in: body
         name: body
-        description: The object content
+        description: body for Car content
         required: true
         schema:
-          $ref: '#/definitions/models.Object'
+          $ref: '#/definitions/models.Car'
       responses:
-        "200":
-          description: '{string} models.Object.Id'
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Car'
         "403":
           description: body is empty
-  /object/{objectId}:
+  /car/{id}:
     get:
       tags:
-      - object
+      - car
       description: |-
-        find object by objectid
+        get Car by id
         <br>
-      operationId: ObjectController.Get
+      operationId: CarController.GetOne
       parameters:
       - in: path
-        name: objectId
-        description: the objectid you want to get
+        name: id
+        description: The key for staticblock
         required: true
         type: string
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Object'
+            $ref: '#/definitions/models.Car'
         "403":
-          description: :objectId is empty
+          description: :id is empty
     put:
       tags:
-      - object
+      - car
       description: |-
-        update the object
+        update the Car
         <br>
-      operationId: ObjectController.Update
+      operationId: CarController.Put
       parameters:
       - in: path
-        name: objectId
-        description: The objectid you want to update
+        name: id
+        description: The id you want to update
         required: true
         type: string
       - in: body
         name: body
-        description: The body
+        description: body for Car content
         required: true
         schema:
-          $ref: '#/definitions/models.Object'
+          $ref: '#/definitions/models.Car'
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Object'
+            $ref: '#/definitions/models.Car'
         "403":
-          description: :objectId is empty
+          description: :id is not int
     delete:
       tags:
-      - object
+      - car
       description: |-
-        delete the object
+        delete the Car
         <br>
-      operationId: ObjectController.Delete
+      operationId: CarController.Delete
       parameters:
       - in: path
-        name: objectId
-        description: The objectId you want to delete
+        name: id
+        description: The id you want to delete
         required: true
         type: string
       responses:
         "200":
           description: '{string} delete success!'
         "403":
-          description: objectId is empty
+          description: id is empty
   /user/:
     get:
       tags:
@@ -244,17 +272,17 @@ paths:
         "200":
           description: '{string} logout success'
 definitions:
-  models.Object:
-    title: Object
+  models.Car:
+    title: Car
     type: object
     properties:
-      ObjectId:
-        type: string
-      PlayerName:
-        type: string
-      Score:
+      Id:
         type: integer
         format: int64
+      Make:
+        type: string
+      Model:
+        type: string
   models.Profile:
     title: Profile
     type: object
@@ -281,9 +309,9 @@ definitions:
       Username:
         type: string
 tags:
-- name: object
+- name: car
   description: |
-    Operations about object
+    CarController operations for Car
 - name: user
   description: |
     Operations about Users
